docs: fix collapsing sidebar

--- a/packages/docs/src/app/layout.module.scss
+++ b/packages/docs/src/app/layout.module.scss
@@ -52,6 +52,7 @@
 .mainNavigation {
   padding-inline: var(--size-px--l);
   width: 270px;
+  flex-shrink: 0;
 }
 
 .mobileNavigation {
